--- a/Config/PostgresSQL.ipynb
+++ b/Config/PostgresSQL.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " # -------------------------------------PostgresSQL-------------------------------------"
+    "# ———————————————— PostgresSQL ————————————————"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create table"
    ]
   },
   {
@@ -13,13 +20,131 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CREATE TABLE users (\n",
+    "CREATE TABLE <name_table> (\n",
     "    id BIGINT NOT NULL PRIMARY KEY,\n",
-    "    first_name VARCHAR(64) NOT NULL,\n",
+    "    <name_columns> VARCHAR(64) NOT NULL,\n",
     "    last_name VARCHAR(64) NOT NULL,\n",
     "    email VARCHAR(128) NOT NULL\n",
     ");\n",
-    "\n"
+    "\n",
+    "————————————————————————————————————————————————————————————————————————————————————\n",
+    "\n",
+    "//FOREIGN KEY//\n",
+    "\n",
+    "CREATE TABLE spendings (\n",
+    "    id BIGINT NOT NULL PRIMARY KEY,\n",
+    "    price INT NOT NULL,\n",
+    "    created_at TIMESTAMP DEFAULT now(),\n",
+    "\tuser_id BIGINT NOT NULL,\n",
+    "\n",
+    "\tCONSTRAINT user_id_fk FOREIGN KEY (user_id) REFERENCES users (id)\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding user data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INSERT INTO users (id, first_name, last_name, email)\n",
+    "    INSERT INTO <name_table> (name_columns)\n",
+    "    \n",
+    "VALUES (1, 'Jan', 'Kowalski', 'kowalski@gmail.com');\n",
+    "    VALUES < (input information) >"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Edit user data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "UPDATE <name_table> SET\n",
+    "email = 'mickiewicz@gmail.com', first_name = 'Adam', last_name = 'Mickiewicz'\n",
+    "    <name_columns> = < 'What you went edit' >\n",
+    "WHERE id = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Delete row on table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DELETE FROM <name_table>\n",
+    "WHERE id = 2 OR id =3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Show user data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SELECT id, first_name, last_name, email FROM users\n",
+    "    SELECT <the column from which you want to get information> FROM <name_table>\n",
+    "WHERE id = 1\n",
+    "\n",
+    "————————————————————————————————————————————————————————————————————————————————————\n",
+    "\n",
+    "//Inner Join//\n",
+    "\n",
+    "SELECT spendings.*, users.first_name FROM spendings\n",
+    "    SELECT < * it is all table > FROM <name_table>\n",
+    "INNER JOIN users ON users.id = spendings.user_id\n",
+    "    INNER JOIN <name_table> ON <name_table.name_columns> = <name_table.name_columns>\n",
+    "\n",
+    "————————————————————————————————————————————————————————————————————————————————————\n",
+    "\n",
+    "//Left outer Join or Right outer Join//\n",
+    "\n",
+    "SELECT spendings.*, users.first_name FROM spendings\n",
+    "    SELECT < * it is all table > FROM <name_table>\n",
+    "LEFT / RIGHT OUTER JOIN users ON users.id = spendings.user_id\n",
+    "    LEFT / RIGHT OUTER JOIN <name_table> ON <name_table.name_columns> = <name_table.name_columns>\n",
+    "\n",
+    "————————————————————————————————————————————————————————————————————————————————————\n",
+    "\n",
+    "//Function SUM//\n",
+    "\n",
+    "SELECT SUM(price) FROM spendings\n",
+    "GROUP BY user_id\n",
+    "\n",
+    "————————————————————————————————————————————————————————————————————————————————————\n",
+    "\n",
+    "SELECT users.*, SUM(spendings.price) FROM users\n",
+    "JOIN spendings ON users.id = spendings.user_id\n",
+    "GROUP BY users.id, spendings.user_id\n",
+    "HAVING SUM(spendings.price) > 1000000"
    ]
   },
   {
