--- a/Config/AWX-Start.ipynb
+++ b/Config/AWX-Start.ipynb
@@ -29,7 +29,9 @@
     "\n",
     "kubectl port-forward svc/awx-service --address 0.0.0.0 8080:80 &> /dev/null &\n",
     "\n",
-    "kubectl get secret awx-admin-password -o jsonpath=\"{.data.password}\" | base64 --decode; echo\n",
+    "kubectl get secret awx-admin-password -o jsonpath=sudo \"{.data.password}\" | base64 --decode; echo\n",
+    "\n",
+    "kubectl get secret --namespace awx awx-admin-password -o jsonpath=\"{.data.password}\" | base64 --decode\n",
     "\n",
     "kubectl logs -f deployments/awx-operator-controller-manager -c awx-manager"
    ]
