--- a/Documents/Git.ipynb
+++ b/Documents/Git.ipynb
@@ -12,7 +12,7 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "plaintext"
+     "languageId": "powershell"
     }
    },
    "outputs": [],
@@ -22,6 +22,30 @@
     "    \n",
     "git checkout <name_branch> (switch on branch)\n",
     "    git merge <name_branch> (unite branch whith 'MASTER' or 'MAIN')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Main commands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "powershell"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "git add .\n",
+    "\n",
+    "git commit -m \"edit master 1.0.0.0.1\"\n",
+    "\n",
+    "git push"
    ]
   }
  ],
