--- a/Documents/PostgreSQL.ipynb
+++ b/Documents/PostgreSQL.ipynb
@@ -17,7 +17,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [],
    "source": [
     "CREATE TABLE <name_table> (\n",
@@ -51,7 +55,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [],
    "source": [
     "INSERT INTO users (id, first_name, last_name, email)\n",
@@ -71,7 +79,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [],
    "source": [
     "UPDATE <name_table> SET\n",
@@ -90,7 +102,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [],
    "source": [
     "DELETE FROM <name_table>\n",
@@ -107,7 +123,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [],
    "source": [
     "SELECT id, first_name, last_name, email FROM users\n",
@@ -150,7 +170,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [],
    "source": [
     "sudo systemctl status postgresql (checking postgresSQL status)\n",
