--- a/Documents/AWX_Run.ipynb
+++ b/Documents/AWX_Run.ipynb
@@ -12,7 +12,7 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "plaintext"
+     "languageId": "bat"
     }
    },
    "outputs": [],
