--- a/Documents/Docker.ipynb
+++ b/Documents/Docker.ipynb
@@ -10,7 +10,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "powershell"
+    }
+   },
    "outputs": [],
    "source": [
     "docker ps (show run container)\n",
