--- a/Documents/Docker.ipynb
+++ b/Documents/Docker.ipynb
@@ -12,13 +12,32 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "powershell"
+     "languageId": "shellscript"
     }
    },
    "outputs": [],
    "source": [
-    "docker ps (show run container)\n",
-    "docker ps -a (show all container)"
+    "$ docker ps (show run container)\n",
+    "$ docker ps -a (show all container)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "$ docker commit <kontener> skni_img\n",
+    "\n",
+    "$ docker image ls\n",
+    "\n",
+    "$ docker history skni_img\n",
+    "\n",
+    "$ docker history ubuntu"
    ]
   }
  ],
