--- a/Documents/Docker.ipynb
+++ b/Documents/Docker.ipynb
@@ -17,27 +17,18 @@
    },
    "outputs": [],
    "source": [
-    "$ docker ps (show run container)\n",
-    "$ docker ps -a (show all container)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "$ docker commit <kontener> skni_img\n",
     "\n",
-    "$ docker image ls\n",
+    "docker ps (show run container)\n",
+    "docker ps -a (show all container)\n",
+    "____________________________________________________________________________________\n",
     "\n",
-    "$ docker history skni_img\n",
+    "docker run -it <busybox> (create and run container and open bush)\n",
+    "docker stop (kill container)\n",
+    "docker container prune (remove all containers)\n",
+    "____________________________________________________________________________________\n",
     "\n",
-    "$ docker history ubuntu"
+    "docker run -d <nginx> (create and run container in background)\n",
+    "\n"
    ]
   }
  ],
