--- a/Docker/Docker.ipynb
+++ b/Docker/Docker.ipynb
@@ -23,12 +23,24 @@
     "____________________________________________________________________________________\n",
     "\n",
     "docker run -it <busybox> (create and run container and open bush)\n",
-    "docker stop (kill container)\n",
+    "docker stop <ID or name container>(kill container)\n",
     "docker container prune (remove all containers)\n",
+    "docker container inspect <ID container> (information about container)\n",
     "____________________________________________________________________________________\n",
     "\n",
     "docker run -d <nginx> (create and run container in background)\n",
-    "\n"
+    "____________________________________________________________________________________\n",
+    "\n",
+    "docker exec -it <ID or name container> <name process \"bash\">\n",
+    "\n",
+    "docker run -d -p 8081:80 nginx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### How to create container in docker"
    ]
   }
  ],
