--- a/Documents/Git.ipynb
+++ b/Documents/Git.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Main commands"
+    "#### Main commands"
    ]
   },
   {
@@ -46,6 +46,27 @@
     "git commit -m \"edit master 1.0.0.0.1\"\n",
     "\n",
     "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Author"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "powershell"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "git config --global user.email \"you@example.com\"\n",
+    "git config --global user.name \"Your Name\""
    ]
   }
  ],
