--- a/Docker/Docker.ipynb
+++ b/Docker/Docker.ipynb
@@ -37,10 +37,43 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
    "source": [
-    "#### How to create container in docker"
+    "docker images (show installed all images) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "docker ps (show run container)\n",
+    "docker ps -a (show all container)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "docker run -it <busybox> (create and run container and open terminal)"
    ]
   }
  ],
